--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
     "http-proxy-middleware": "^1.0.4",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.27.0",
+    "moment-timezone": "^0.5.31",
     "mongoose": "^5.10.0",
     "multer": "^1.4.2",
+    "node-sass": "^4.14.1",
     "nodemon": "^2.0.4",
     "react": "^16.13.1",
+    "react-big-calendar": "^0.26.0",
     "react-dom": "^16.13.1",
     "react-dropzone": "^11.0.3",
     "react-redux": "^7.2.1",
