--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "nodemon": "^2.0.4",
     "react": "^16.13.1",
     "react-big-calendar": "^0.26.0",
+    "react-datepicker": "^3.1.3",
     "react-dom": "^16.13.1",
     "react-dropzone": "^11.0.3",
     "react-redux": "^7.2.1",
