--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "concurrently": "^5.3.0",
     "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
+    "draft-convert": "^2.1.10",
+    "draft-js": "^0.11.7",
     "express": "^4.17.1",
     "fluent-ffmpeg": "^2.1.2",
     "http-proxy-middleware": "^1.0.4",
