--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mongoose": "^5.10.0",
     "multer": "^1.4.2",
     "node-sass": "^4.14.1",
+    "nodemailer": "^6.4.11",
     "nodemon": "^2.0.4",
     "react": "^16.13.1",
     "react-big-calendar": "^0.26.0",
