--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "react-datepicker": "^3.1.3",
     "react-dom": "^16.13.1",
     "react-dropzone": "^11.0.3",
+    "react-google-login": "^5.1.21",
+    "react-kakao-login": "^1.2.3",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.3",
@@ -43,7 +45,8 @@
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^1.1.1",
     "socket.io": "^2.3.0",
-    "socket.io-client": "^2.3.0"
+    "socket.io-client": "^2.3.0",
+    "styled-components": "^5.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
